[package]
name = "oauth_server"
version = "0.0.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rand = "0.8.5"
fastrand = "2.2.0"
mysql="*"
dotenv = "0.15.0"
